--- a/backend_sistema_notificaciones/package.json
+++ b/backend_sistema_notificaciones/package.json
@@ -20,7 +20,13 @@
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
+    "pug": "^3.0.3",
     "resend": "^3.2.0",
     "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "chai": "^5.1.2",
+    "mocha": "^11.0.1",
+    "supertest": "^7.0.0"
   }
 }
