--- a/frontend-sistema-notificaciones/package.json
+++ b/frontend-sistema-notificaciones/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "bootstrap": "^5.3.3",
+    "chart": "^0.1.2",
+    "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
+    "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.4"
+    "react-hook-form": "^7.54.2",
+    "sweetalert": "^2.1.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.1.4"
   }
 }
