--- a/backend_sistema_notificaciones/package.json
+++ b/backend_sistema_notificaciones/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
