--- a/frontend-sistema-notificaciones/package.json
+++ b/frontend-sistema-notificaciones/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "bootstrap": "^5.3.3",
+    "browser-image-compression": "^2.0.2",
     "chart": "^0.1.2",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
