Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,9 @@ stages:
   - job: Build_Backend
     displayName: 'Instalar dependencias y preparar backend'
     pool:
-      name: 'pool1'
+      name: Default
+      demands:
+      - agent.name -equals pool1
     steps:
     - checkout: self
 
