Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,9 @@ stages:
     displayName: 'Desplegar Backend en Azure App Service'
     environment: 'production'
     pool:
-      vmImage: 'ubuntu-latest'
+      name: Default
+      demands:
+      - agent.name -equals pool1
     strategy:
       runOnce:
         deploy:
