--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,7 @@ stages:
               ConnectionType: 'AzureRM'
               azureSubscription: 'Azure for Students(b1a9be0c-3adb-4b54-9b44-14b4d64810e1)'
               appType: 'webAppLinux'
-              WebAppName: 'tfBackNotif'
+              WebAppName: 'tfnotif-back'
               packageForLinux: '$(Build.ArtifactStagingDirectory)/backend.zip'
               RuntimeStack: 'NODE|18-lts'
               StartupCommand: 'npm start'
