Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -112,7 +112,7 @@ stages:
               ConnectionType: 'AzureRM'
               azureSubscription: 'Azure for Students(af4c3a90-6ae3-45fb-a39a-e727038433fc)'
               appType: 'webAppLinux'
-              WebAppName: 'backend-noti'
+              WebAppName: 'back-prue'
               packageForLinux: '$(Build.ArtifactStagingDirectory)/backend/backend.zip'
               RuntimeStack: 'NODE|18-lts'
               StartupCommand: 'npm start'
@@ -144,7 +144,7 @@ stages:
               ConnectionType: 'AzureRM'
               azureSubscription: 'Azure for Students(af4c3a90-6ae3-45fb-a39a-e727038433fc)'
               appType: 'webAppLinux'
-              WebAppName: 'frontend-noti'
+              WebAppName: 'front-prue'
               packageForLinux: '$(Build.ArtifactStagingDirectory)/frontend/frontend.zip'
               RuntimeStack: 'NODE|18-lts'
               StartupCommand: 'npm run start'
