--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,7 +61,21 @@ stages:
 
     - script: |
         cd frontend-sistema-notificaciones
-        npm install
+        npm run build
+      displayName: 'Instalar dependencias'
+    - task: UseNode@1
+      inputs:
+        version: $(NODE_VERSION)
+
+    - script: |
+        npm run build
+      displayName: 'construir frontend'
+    - task: UseNode@1
+      inputs:
+        version: $(NODE_VERSION)
+
+    - script: |
+        cd frontend-sistema-notificaciones
         npm run build
       displayName: 'Construir Frontend'
     - task: ArchiveFiles@2
