--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,10 @@ stages:
         cd backend_sistema_notificaciones
         npm install
       displayName: 'Instalar dependencias'
-
+    - task: PowerShell@2
+      inputs:
+        filePath: '$(Build.ArtifactStagingDirectory)/frontend-sistema-notificaciones'
+        arguments: 'npm run build'
     - task: ArchiveFiles@2
       inputs:
         rootFolderOrFile: 'backend_sistema_notificaciones'
@@ -62,8 +65,10 @@ stages:
 
     - script: |
         cd .\frontend-sistema-notificaciones\ 
-        npm install ; npm run build
+        npm install
       displayName: 'Instalar dependencias y construir frontend'
+
+    
     - task: ArchiveFiles@2
       inputs:
         rootFolderOrFile: 'frontend_sistema_notificaciones/.next'
