--- a/frontend-sistema-notificaciones/package.json
+++ b/frontend-sistema-notificaciones/package.json
@@ -15,6 +15,7 @@
     "chart": "^0.1.2",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
     "next": "15.1.4",
     "react": "^19.0.0",
