correción parseo variables

--- a/azure-pipelines-containers.yml
+++ b/azure-pipelines-containers.yml
@@ -29,21 +29,21 @@ stages:
           inputs:
             script: |
               cd backend_sistema_notificaciones
-              docker build -t $(env:CONTAINER_REGISTRY_URL)/backend-notificaciones:$(env:BACKEND_TAG) \
-                    --build-arg DB_USERNAME=$(env:DB_USERNAME) \
-                    --build-arg DB_PASSWORD=$(env:DB_PASSWORD) \
-                    --build-arg DB_DATABASE=$(env:DB_DATABASE) \
-                    --build-arg DB_HOST=$(env:DB_HOST) \
-                    --build-arg DB_PORT=$(env:DB_PORT) \
-                    --build-arg DB_DIALECT=$(env:DB_DIALECT) \
-                    --build-arg DB_OPERATOR_ALIASES=$(env:DB_OPERATOR_ALIASES) \
-                    --build-arg NODE_ENV=$(env:NODE_ENV) \
-                    --build-arg KEY_SQ=$(env:KEY_SQ) \
-                    --build-arg LOGIC_APPS_URL=$(env:LOGIC_APPS_URL) \
+              docker build -t $(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG) \
+                    --build-arg DB_USERNAME=$(DB_USERNAME) \
+                    --build-arg DB_PASSWORD=$(DB_PASSWORD) \
+                    --build-arg DB_DATABASE=$(DB_DATABASE) \
+                    --build-arg DB_HOST=$(DB_HOST) \
+                    --build-arg DB_PORT=$(DB_PORT) \
+                    --build-arg DB_DIALECT=$(DB_DIALECT) \
+                    --build-arg DB_OPERATOR_ALIASES=$(DB_OPERATOR_ALIASES) \
+                    --build-arg NODE_ENV=$(NODE_ENV) \
+                    --build-arg KEY_SQ=$(KEY_SQ) \
+                    --build-arg LOGIC_APPS_URL=$(LOGIC_APPS_URL) \
                     .
           displayName: "construir imagen del backend"
         
         - task: CmdLine@2
           inputs:
-            script: 'docker push$(env:CONTAINER_REGISTRY_URL)/backend-notificaciones:$(env:BACKEND_TAG)'
+            script: 'docker push$(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG)'
           displayName: "Registrar Backend a Container Registry"
