--- a/azure-pipelines-containers.yml
+++ b/azure-pipelines-containers.yml
@@ -14,7 +14,7 @@ stages:
   - stage: Deploy_Backend
     displayName: "construir y desplegar backend en Container Registry"
     jobs:
-      - job: Build_Backend_COntainer
+      - job: Build_Backend_Container
         steps:
         - task: UseNode@1
           inputs:
@@ -29,21 +29,11 @@ stages:
           inputs:
             script: |
               cd backend_sistema_notificaciones
-              docker build -t $(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG) \
-                    --build-arg DB_USERNAME=$(DB_USERNAME) \
-                    --build-arg DB_PASSWORD=$(DB_PASSWORD) \
-                    --build-arg DB_DATABASE=$(DB_DATABASE) \
-                    --build-arg DB_HOST=$(DB_HOST) \
-                    --build-arg DB_PORT=$(DB_PORT) \
-                    --build-arg DB_DIALECT=$(DB_DIALECT) \
-                    --build-arg DB_OPERATOR_ALIASES=$(DB_OPERATOR_ALIASES) \
-                    --build-arg NODE_ENV=$(NODE_ENV) \
-                    --build-arg KEY_SQ=$(KEY_SQ) \
-                    --build-arg LOGIC_APPS_URL=$(LOGIC_APPS_URL) \
+              docker build -t $(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG) --build-arg DB_USERNAME=$(DB_USERNAME) --build-arg DB_PASSWORD=$(DB_PASSWORD) --build-arg DB_DATABASE=$(DB_DATABASE) --build-arg DB_HOST=$(DB_HOST) build-arg DB_PORT=$(DB_PORT) --build-arg DB_DIALECT=$(DB_DIALECT) --build-arg DB_OPERATOR_ALIASES=$(DB_OPERATOR_ALIASES) --build-arg NODE_ENV=$(NODE_ENV) --build-arg KEY_SQ=$(KEY_SQ) --build-arg LOGIC_APPS_URL=$(LOGIC_APPS_URL) \
                     .
           displayName: "construir imagen del backend"
         
         - task: CmdLine@2
           inputs:
-            script: 'docker push$(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG)'
+            script: 'docker push $(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG)'
           displayName: "Registrar Backend a Container Registry"
