--- a/azure-pipelines-containers.yml
+++ b/azure-pipelines-containers.yml
@@ -28,7 +28,6 @@ stages:
         - task: CmdLine@2
           inputs:
             script: |
-              cd backend_sistema_notificaciones
               docker build -t $(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG) ^
                 --build-arg DB_USERNAME="$(DB_USERNAME)" ^
                 --build-arg DB_PASSWORD="$(DB_PASSWORD)" ^
@@ -41,9 +40,9 @@ stages:
                 --build-arg KEY_SQ="$(KEY_SQ)" ^
                 --build-arg LOGIC_APPS_URL="$(LOGIC_APPS_URL)" ^
                 .
+            workingDirectory: '$(Build.SourcesDirectory)/backend_sistema_notificaciones'
           displayName: "construir imagen del backend"
 
-        
         - task: CmdLine@2
           inputs:
             script: 'docker push $(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG)'
