feat: agregado despliegue del backend a Container App

--- a/azure-pipelines-containers.yml
+++ b/azure-pipelines-containers.yml
@@ -11,7 +11,7 @@ pool:
   - agent.name -equals pool1
 
 stages:
-  - stage: Deploy_Backend
+  - stage: Register_Backend
     displayName: "construir y desplegar backend en Container Registry"
     jobs:
       - job: Build_Backend_Container
@@ -28,14 +28,25 @@ stages:
         - task: CmdLine@2
           inputs:
             script: |
-              dir
               cd backend_sistema_notificaciones
-              dir
-              docker build -t $(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG) --build-arg DB_USERNAME="$(DB_USERNAME)" --build-arg DB_PASSWORD="$(DB_PASSWORD)" --build-arg DB_DATABASE="$(DB_DATABASE)" --build-arg DB_HOST="$(DB_HOST)" --build-arg DB_PORT="$(DB_PORT)" --build-arg DB_DIALECT="$(DB_DIALECT)" --build-arg DB_OPERATOR_ALIASES="$(DB_OPERATOR_ALIASES)" --build-arg NODE_ENV="$(NODE_ENV)" --build-arg KEY_SQ="$(KEY_SQ)" --build-arg LOGIC_APPS_URL="$(LOGIC_APPS_URL)" .
+              docker build -t $(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG) --build-arg DB_USERNAME=$(DB_USERNAME) --build-arg DB_PASSWORD=$(DB_PASSWORD) --build-arg DB_DATABASE=$(DB_DATABASE) --build-arg DB_HOST=$(DB_HOST) build-arg DB_PORT=$(DB_PORT) --build-arg DB_DIALECT=$(DB_DIALECT) --build-arg DB_OPERATOR_ALIASES=$(DB_OPERATOR_ALIASES) --build-arg NODE_ENV=$(NODE_ENV) --build-arg KEY_SQ=$(KEY_SQ) --build-arg LOGIC_APPS_URL=$(LOGIC_APPS_URL) .
           displayName: "construir imagen del backend"
-
-
+        
         - task: CmdLine@2
           inputs:
             script: 'docker push $(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG)'
           displayName: "Registrar Backend a Container Registry"
+  - stage: Deploy_backend
+    displayName: "Desplegar contenedor de backend a Container App"
+    dependsOn: Register_Backend
+    jobs:
+      - job: Release_backend_container
+        steps:
+          - task: AzureContainerApps@1
+            inputs:
+              azureSubscription: 'Azure for Students(be47ff6d-9100-47c2-ab9a-af967aabfd60)'
+              acrName: '$(CONTAINER_REGISTRY_URL)'
+              imageToDeploy: '$(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG)'
+              containerAppName: 'tf-backend'
+              resourceGroup: 'TrabajoFinalCloud'
+              targetPort: '8000'
