--- a/azure-pipelines-containers.yml
+++ b/azure-pipelines-containers.yml
@@ -29,7 +29,7 @@ stages:
           inputs:
             script: |
               cd backend_sistema_notificaciones
-              docker build -t $(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG) -e DB_USERNAME=$(DB_USERNAME) -e DB_PASSWORD=$(DB_PASSWORD) --build-arg DB_DATABASE=$(DB_DATABASE) -e DB_HOST=$(DB_HOST) --build-arg DB_PORT=$(DB_PORT) --build-arg DB_DIALECT=$(DB_DIALECT) --build-arg DB_OPERATOR_ALIASES=$(DB_OPERATOR_ALIASES) --build-arg NODE_ENV=$(NODE_ENV) -e KEY_SQ=$(KEY_SQ) --build-arg LOGIC_APPS_URL=$(LOGIC_APPS_URL) .
+              docker build -t $(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG) --build-arg DB_USERNAME=$(DB_USERNAME) --build-arg DB_PASSWORD=$(DB_PASSWORD) --build-arg DB_DATABASE=$(DB_DATABASE) --build-arg DB_HOST=$(DB_HOST) --build-arg DB_PORT=$(DB_PORT) --build-arg DB_DIALECT=$(DB_DIALECT) --build-arg DB_OPERATOR_ALIASES=$(DB_OPERATOR_ALIASES) --build-arg NODE_ENV=$(NODE_ENV) --build-arg KEY_SQ=$(KEY_SQ) --build-arg LOGIC_APPS_URL=$(LOGIC_APPS_URL) .
           displayName: "construir imagen del backend"
         
         - task: CmdLine@2
