correcion de sintaxis de despliegue

--- a/azure-pipelines-containers.yml
+++ b/azure-pipelines-containers.yml
@@ -46,8 +46,8 @@ stages:
           - task: AzureContainerApps@1
             inputs:
               azureSubscription: 'Azure for Students(be47ff6d-9100-47c2-ab9a-af967aabfd60)'
-              acrName: '$(CONTAINER_REGISTRY_URL)'
-              acrUsername: 'tfcontainerregistry'
+              acrName: '$(ACR_NAME)'
+              acrUsername: '$(ACR_USERNAME)'
               acrPassword: '$(ACR_PASSWORD)'
               imageToDeploy: '$(CONTAINER_REGISTRY_URL)/backend-notificaciones:$(BACKEND_TAG)'
               containerAppName: 'tf-backend'
