backend: recibir mensaje

--- a/backend_sistema_notificaciones/Dockerfile
+++ b/backend_sistema_notificaciones/Dockerfile
@@ -12,6 +12,9 @@ ARG DB_OPERATOR_ALIASES
 ARG NODE_ENV
 ARG KEY_SQ
 ARG LOGIC_APPS_URL
+ARG CREDENTIALS_PATH
+ARG TOKEN_PATH
+ARG SCOPES
 
 # Establece las variables de entorno usando los argumentos
 ENV DB_USERNAME=${DB_USERNAME}
@@ -24,6 +27,9 @@ ENV DB_OPERATOR_ALIASES=${DB_OPERATOR_ALIASES}
 ENV NODE_ENV=${NODE_ENV}
 ENV KEY_SQ=${KEY_SQ}
 ENV LOGIC_APPS_URL=${LOGIC_APPS_URL}
+ENV CREDENTIALS_PATH=${CREDENTIALS_PATH}
+ENV TOKEN_PATH=${TOKEN_PATH}
+ENV SCOPES=${SCOPES}
 
 # Establece el directorio de trabajo
 WORKDIR /app
