--- a/backend_sistema_notificaciones/package.json
+++ b/backend_sistema_notificaciones/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
     "express-validator": "^7.0.1",
+    "googleapis": "^144.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
