--- a/frontend-sistema-notificaciones/package.json
+++ b/frontend-sistema-notificaciones/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-highlight-words": "^0.21.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "sweetalert": "^2.1.2",
     "yup": "^1.6.1"
   },
