--- a/backend_sistema_notificaciones/package.json
+++ b/backend_sistema_notificaciones/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "browser-image-compression": "^2.0.2",
     "cookie-parser": "~1.4.4",
@@ -23,6 +24,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pug": "^3.0.3",
