--- a/backend_sistema_notificaciones/package.json
+++ b/backend_sistema_notificaciones/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.26.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "browser-image-compression": "^2.0.2",
