--- a/frontend-sistema-notificaciones/package.json
+++ b/frontend-sistema-notificaciones/package.json
@@ -14,6 +14,8 @@
     "@codemirror/state": "^6.5.1",
     "@codemirror/view": "^6.36.2",
     "@hookform/resolvers": "^3.10.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@uiw/react-codemirror": "^4.23.7",
     "bootstrap": "^5.3.3",
     "browser-image-compression": "^2.0.2",
